<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.DownloadsFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="Downloads"
        app:titleTextColor="@color/text_primary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_secondary"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:textSize="14sp"
                app:drawableTint="@color/text_secondary"
                android:text="@string/smart_downloads"
                app:drawableStartCompat="@drawable/ic_settings_outline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/text_primary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/introducing_downloads_for_you"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_secondary"
                android:lineHeight="21sp"
                android:textSize="14sp"
                android:text="@string/we_ll_download_a_personalized"/>

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="24dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:backgroundTint="@color/blue"
                android:text="@string/set_up"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                app:backgroundTint="@color/dark_gray"
                android:textAllCaps="false"
                android:text="@string/find_something_to_download"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>